--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
 
 <body>
     <header>
-        <div class="nav-links">
             <nav>
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
-        </div>
     </header>
     <section class="title-container">
         <div class="home-text">
             <h1>50 Influential<br>Artists</h1>
             <div class="my-btn">
                 <button>Contact Us</button>
-            </div>
+            </div>    
         </div>
     </section>
     <section>
@@ -34,28 +32,36 @@
     </section>
     <section class="artists-container">
         <div class="artist">
-            <img
-                src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg" alt="starynight" width="50%"" height="75%"/>
-            <a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh"> Vincent Van Gogh</a>
-            <div class="bio">Vincent Willem van Gogh (Dutch: [ˈvɪnsɛnt ˈʋɪləm vɑŋ ˈɣɔx] (listen); 30 March 1853 – 29
+            <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg" alt="starynight" width="70%"" height="63%"/>
+            <h2><a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh"> Vincent Van Gogh</a></h2>
+            <div class="bio">
+                <p>Vincent Willem van Gogh (Dutch: [ˈvɪnsɛnt ˈʋɪləm vɑŋ ˈɣɔx] (listen); 30 March 1853 – 29
                 July 1890) was a Dutch Post-Impressionist painter who is among the most famous and influential figures
                 in the history of Western art. In just over a decade he created about 2,100 artworks, including around
                 860 oil paintings, most of them in the last two years of his life. They include landscapes, still lifes,
                 portraits and self-portraits, and are characterised by bold colours and dramatic, impulsive and
                 expressive brushwork that contributed to the foundations of modern art. However, he was not commercially
-                successful, and his suicide at 37 followed years of mental illness and poverty.</div>
+                successful, and his suicide at 37 followed years of mental illness and poverty.</p>
+            </div>
         </div>
 
         <div class="artist">
-            <img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg/600px-The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg" />
-            <a href="https://en.wikipedia.org/wiki/J._M._W._Turner"> Joseph Mallord William Turner</a>
-            <div class="bio">Joseph Mallord William Turner (23 April 1775 – 19 December 1851), known as J. M. W. Turner
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg/600px-The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg" />
+            <h2><a href="https://en.wikipedia.org/wiki/J._M._W._Turner"> Joseph Mallord William Turner</a></h2>
+            <div class="bio">
+                <p>Joseph Mallord William Turner (23 April 1775 – 19 December 1851), known as J. M. W. Turner
                 and contemporarily as William Turner, was an English Romantic painter, printmaker and water colourist.
                 He is known for his expressive colourisations, imaginative landscapes and turbulent, often violent
-                marine paintings.</div>
+                marine paintings.</p>
+            </div>
         </div>
     </section>
+    <footer>
+        <div class="blank-footer">
+
+        </div>
+    </footer>
+    <script src="index.js"></script>
 </body>
 
 </html>
