Made changes to CSS

--- a/index.html
+++ b/index.html
@@ -12,17 +12,15 @@
 <body>
     <header>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="#">Home |</a>
+                <a href="#">About |</a>
                 <a href="#">Contact</a>
             </nav>
     </header>
     <section class="title-container">
-        <div class="home-text">
+        <div class="home-container">
             <h1>50 Influential<br>Artists</h1>
-            <div class="my-btn">
-                <button>Contact Us</button>
-            </div>    
+            <button>Contact Us</button>   
         </div>
     </section>
     <section>
