Made changes to CSS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="title-container">
         <div class="home-container">
             <h1>50 Influential<br>Artists</h1>
-            <button>Contact Us</button>   
+            <button class="my-btn">Contact Us</button>   
         </div>
     </section>
     <section>
