--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="my-btn">Contact Us</button>   
         </div>
     </section>
-    <section>
+    <section id="line">
         <div class="middle-divide">
             <hr>
         </div>
