--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
     <section class="artists-container">
         <div class="artist">
-            <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/starry-night-by-vincent-van-gogh-vincent-van-gogh.jpg" alt="starynight" width="70%"" height="63%"/>
+            <img src="assets/starry-night.jpg" alt="starrynight"/>
             <h2><a href="https://en.wikipedia.org/wiki/Vincent_van_Gogh"> Vincent Van Gogh</a></h2>
             <div class="bio">
                 <p>Vincent Willem van Gogh (Dutch: [ˈvɪnsɛnt ˈʋɪləm vɑŋ ˈɣɔx] (listen); 30 March 1853 – 29
@@ -44,7 +44,7 @@
         </div>
 
         <div class="artist">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg/600px-The_Fighting_Temeraire%2C_JMW_Turner%2C_National_Gallery.jpg" />
+            <img src="assets/turner.jpg"/>
             <h2><a href="https://en.wikipedia.org/wiki/J._M._W._Turner"> Joseph Mallord William Turner</a></h2>
             <div class="bio">
                 <p>Joseph Mallord William Turner (23 April 1775 – 19 December 1851), known as J. M. W. Turner
